After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677509 - Icons lacking several needed accessible states
Icons lacking several needed accessible states
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: Icon View
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 677496 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-06-05 20:09 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2012-06-09 03:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
event listener (436 bytes, text/plain)
2012-06-05 20:09 UTC, Joanmarie Diggs (IRC: joanie)
Details

Description Joanmarie Diggs (IRC: joanie) 2012-06-05 20:09:23 UTC
Created attachment 215683 [details]
event listener

Steps to reproduce:

1. Launch the attached accessible event listener in a terminal
2. Launch Nautilus and arrow around the icons

Expected results: At least the following states would be listed, along with the selected item:

     <enum ATSPI_STATE_ENABLED of type StateType>
     <enum ATSPI_STATE_SELECTABLE of type StateType>
     <enum ATSPI_STATE_SELECTED of type StateType>
     <enum ATSPI_STATE_SENSITIVE of type StateType>
     <enum ATSPI_STATE_SHOWING of type StateType>
     <enum ATSPI_STATE_VISIBLE of type StateType>

Actual results: Only the following states are listed along with the selected item:

     <enum ATSPI_STATE_SELECTABLE of type StateType>
     <enum ATSPI_STATE_SELECTED of type StateType>

Impact: As far as ATs like Orca are concerned, the icons cannot be interacted with, are not exposed to the user, and not on the screen. This breaks Orca's flat review feature when in Nautilus because flat review lets you spatially examine and search for on-screen objects. We don't think they're on screen.
Comment 1 Joanmarie Diggs (IRC: joanie) 2012-06-05 20:12:01 UTC
*** Bug 677496 has been marked as a duplicate of this bug. ***
Comment 2 Cosimo Cecchi 2012-06-08 03:51:17 UTC
Thanks for the script, that helped a lot in debugging. I fixed this in git master now, the script correctly reports the desired states.
Comment 3 Hammer Attila 2012-06-08 15:06:48 UTC
Cosimo, have chance to land this fix with Nautilus 3.4.3?
When I try applying this patch under gnome-3-4 branch, not all part are applied succesfuly.

Attila
Comment 4 Cosimo Cecchi 2012-06-08 16:13:49 UTC
I now cherry-picked all the relevant commits to the gnome-3-4 branch.
Comment 5 Joanmarie Diggs (IRC: joanie) 2012-06-08 16:44:46 UTC
(In reply to comment #4)
> I now cherry-picked all the relevant commits to the gnome-3-4 branch.

Wow. You *so* rock. Thanks Cosimo!!
Comment 6 Hammer Attila 2012-06-09 03:30:24 UTC
Hopefuly only my system producing following errors during Nautilus compilation:
root@hammera-Satellite-L300:/usr/src/nautilus/nautilus# make >/dev/NULL
nautilus-icon-canvas-item.c:2754:1: error: no previous prototype for 'nautilus_icon_canvas_item_accessible_get_type' [-Werror=missing-prototypes]
cc1: all warnings being treated as errors
make[3]: *** [nautilus-icon-canvas-item.lo] Error 1
make[2]: *** [all] Error 2
make[1]: *** [all-recursive] Error 1
make: *** [all] Error 2

Attila