a11y: fix accessibility implementation for NautilusIconContainer

Clean up a11y code and make sure inheritance for
EelCanvasAccessible->NautilusIconContainerAccessible and for
EelCanvasItemAccessible->NautilusIconCanvasItemAccessible work properly.
This makes the ATK state machinery in EelCanvasItemAccessible work
again, which fixes

https://bugzilla.gnome.org/show_bug.cgi?id=677509